Add Rastrear project to the portfolio

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
+  <style>
+    .block-3 .image {
+      background-size: cover;
+      background-position: top left;
+      width: 60%;
+      margin-bottom: 5%;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -219,6 +228,26 @@
                   the managers.
                 </p>
                 <p><a href="portfolio/harpia.html">Details</a></p>
+              </div>
+            </div>
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="portfolio/rastrear.html" class="image d-flex justify-content-center align-items-center"
+                style="background-image: url('../images/work-8.png'); background-position: top center;"
+                data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
+                </div>
+              </a>
+              <div class="text order-1">
+                <h4 class="subheading">Fullstack Development</h4>
+                <h2 class="heading"><a href="portfolio/rastrear.html">Rastrear</a>
+                </h2>
+                <p>
+                  A vehicle tracker system built on top of Laravel, MySQL, and Redis. The system allows the client to
+                  track their car and motorcycle fleet around the country and also monitors some car metrics and the
+                  health of the vehicle to provide support to logistical and operational decisions.
+                </p>
+                <p><a href="portfolio/rastrear.html">Details</a></p>
               </div>
             </div>
           </div>
