Add Sambatech plugin project

--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
       </section>
 
       <section class="ftco-section">
-        <div class="container">
+        <div class="container mt-5">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Portfolio</span>
-              <h2>Checkout a few of my works</h2>
+              <h2>Checkout a few of my projects</h2>
             </div>
           </div>
           <div class="row no-gutters">
@@ -205,14 +205,13 @@
                 <h2 class="heading"><a href="portfolio/uncc-e-learn.html">UNCC E-Learn</a>
                 </h2>
                 <p>Building a new Massive Open Online Courses platform with Moodle, adding new and powerful custom
-                  features for the project.</p>
+                  features to the project.</p>
                 <p><a href="portfolio/uncc-e-learn.html">Details</a></p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
               <a href="portfolio/harpia.html" class="image order-2 d-flex justify-content-center align-items-center"
-                style="background-image: url('../images/work-4.png'); "
-                data-scrollax=" properties: { translateY: '-30%'}">
+                style="background-image: url('images/work-4.png'); " data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
@@ -224,7 +223,7 @@
                 <p>
                   An academic system built on top of Laravel and fully integrated with the Moodle LMS. Harpia
                   allows you to manage students, teachers, courses, and disciplines and has full integration with
-                  Moodle. The system also monitors students' and teachers' use of the platform to provide insights for
+                  Moodle. The system also monitors students' and teachers' use of the platform to provide insights to
                   the managers.
                 </p>
                 <p><a href="portfolio/harpia.html">Details</a></p>
@@ -232,7 +231,7 @@
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
               <a href="portfolio/rastrear.html" class="image d-flex justify-content-center align-items-center"
-                style="background-image: url('../images/work-8.png'); background-position: top center;"
+                style="background-image: url('images/work-8.png'); background-position: top center;"
                 data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
@@ -248,6 +247,25 @@
                   health of the vehicle to provide support to logistical and operational decisions.
                 </p>
                 <p><a href="portfolio/rastrear.html">Details</a></p>
+              </div>
+            </div>
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="portfolio/sambatech.html" class="image order-2 d-flex justify-content-center align-items-center"
+                style="background-image: url('/images/work-10.jpg'); background-position: top left; width: 75%; background-size: contain;"
+                data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
+                </div>
+              </a>
+              <div class="text order-1">
+                <h4 class="subheading">Backend Development</h4>
+                <h2 class="heading"><a href="portfolio/sambatech.html">Sambatech plugin for Moodle</a>
+                </h2>
+                <p>
+                  A plugin to integrate the Sambatech video platform to LMS Moodle. The plugin also provides detailed
+                  data about video views and user consumption of the content provided.
+                </p>
+                <p><a href="portfolio/sambatech.html">Details</a></p>
               </div>
             </div>
           </div>
