Update sambatech description

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 </h2>
                 <p>
                   A plugin to integrate the Sambatech video platform to LMS Moodle. The plugin also provides detailed
-                  data about video views and user consumption of the content provided.
+                  data on video views and user consumption of the content.
                 </p>
                 <p><a href="portfolio/sambatech.html">Details</a></p>
               </div>
