Update sambatech description

--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                 <h2 class="heading"><a href="portfolio/sambatech.html">Sambatech plugin for Moodle</a>
                 </h2>
                 <p>
-                  A plugin to integrate the Sambatech video platform to LMS Moodle. The plugin also provides detailed
-                  data on video views and user consumption of the content.
+                  A plugin to integrate the Sambatech's video platform to LMS Moodle. The plugin also provides detailed
+                  data about video views and user content consumption.
                 </p>
                 <p><a href="portfolio/sambatech.html">Details</a></p>
               </div>
