Update sambatech description

--- a/portfolio/sambatech.html
+++ b/portfolio/sambatech.html
@@ -108,7 +108,7 @@
                                 </h2>
                                 <p>
                                     A plugin to integrate Sambatech video platform to LMS Moodle. The plugin also
-                                    provides detailed data about video views and user consumption of content provided.
+                                    provides detailed data about video views and user contenct consumption.
                                 </p>
                             </div>
                         </div>
