--- a/portfolio/uncc-e-learn.html
+++ b/portfolio/uncc-e-learn.html
@@ -123,7 +123,7 @@
                                         certificates</a>
                                 </h2>
                                 <p>
-                                    The platform has been a great sucess with courses in several languages, providing
+                                    The platform has been a great success with courses in several languages, providing
                                     education about climate change for everyone.
                                 </p>
                             </div>
